--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,32 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-06-28 19:46:26 -0400 
+%% Created for Pete Su at 2019-06-28 19:53:29 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Cotrufo:2019,
+	Abstract = {Confining light in open structures is a long-sought goal in nanophotonics and cavity quantum electrodynamics. Embedded eigenstates provide infinite lifetime despite the presence of available leakage channels, but in linear time-invariant systems they cannot be excited from the outside, due to reciprocity. Here, we investigate how atomic nonlinearities may support single-photon embedded eigenstates, which can be populated by a multi-photon excitation followed by internal relaxation. We calculate the system dynamics and show that photon trapping, as well as the reverse release process, can be achieved with arbitrarily high efficiencies. We also discuss the impact of loss, and a path toward the experimental verification of these concepts.},
+	Author = {Michele Cotrufo and Andrea Al\`{u}},
+	Date-Added = {2019-06-28 19:51:21 -0400},
+	Date-Modified = {2019-06-28 19:52:45 -0400},
+	Doi = {10.1364/OPTICA.6.000799},
+	Journal = {Optica},
+	Keywords = {Cavity quantum electrodynamics; Phase conjugation; Photon polarization; Photonic bandgap materials; Photonic crystal waveguides; Photons},
+	Month = {Jun},
+	Note = {\href{https://doi.org/10.1364/OPTICA.6.000799}{10.1364/OPTICA.6.000799}},
+	Number = {6},
+	Pages = {799--804},
+	Publisher = {OSA},
+	Title = {{Excitation of single-photon embedded eigenstates in coupled cavity--atom systems}},
+	Url = {http://www.osapublishing.org/optica/abstract.cfm?URI=optica-6-6-799},
+	Volume = {6},
+	Year = {2019},
+	Bdsk-Url-1 = {http://www.osapublishing.org/optica/abstract.cfm?URI=optica-6-6-799},
+	Bdsk-Url-2 = {https://doi.org/10.1364/OPTICA.6.000799}}
 
 @inproceedings{MacKenzie:2000,
 	Archiveprefix = {arXiv},
