--- a/1712.04721v1/v4.review-higgs.tex
+++ b/1712.04721v1/v4.review-higgs.tex
@@ -1,5 +1,26 @@
 \documentclass[final,12pt,3p,longtitle]{elsarticle}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
+\tolerance=2000
+
+
 \biboptions{sort&compress}
 \journal{Physics Reports}
 
