--- a/quant-ph-0302080v1/qtaqmshorterc.tex
+++ b/quant-ph-0302080v1/qtaqmshorterc.tex
@@ -1,10 +1,26 @@
-\tolerance=10000
-\documentstyle[psfig]{article}
-\topmargin=-1.5cm
-\oddsidemargin=1.5cm
-\evensidemargin=1.5cm
-\textwidth=15cm
-\textheight=24cm
+\tolerance=2000
+\documentclass[12pt]{article}
+
+\usepackage{graphicx}
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.2in]{geometry}
+
 \def \baselinestretch{1.0}%%1.75
 %\eqsecnum
 \begin{document}
@@ -792,10 +808,11 @@ system and as a result the effect cannot be factorized in terms of measurement
 operators. This is a minor generalization of the theory of operations and effects as
 stated in Sec.~2 \cite{Gar91}; the same condition (\ref{coef}) for the effects applies. Explicitly,
 equation (\ref{soln2}) shows that the {\sc povm} for the measurement up to time $t$ is 
-\beq \label{foradapt}
-F_t\bl R(t),S(t)\br = P_0 \bl R(t),S(t) \br  \exp \bl \half S(t) {a\dg}^2  + R(t)
-a\dg \br \exp(-a\dg a t) \exp \bl \half S^*(t) a^2  + R^*(t) a \br,
-\eeq
+\bqa \label{foradapt}
+F_t\bl R(t),S(t)\br &=& P_0 \bl R(t),S(t) \br  \exp \bl \half S(t) {a\dg}^2  + R(t)
+a\dg \br \nonumber\\
+&&\qquad \exp(-a\dg a t) \exp \bl \half S^*(t) a^2  + R^*(t) a \br,
+\eqa
 where $P_0\bl R(t),S(t) \br$ is defined analogously to (\ref{P0AB}).
 
 \subsection{Homodyne Detection}
@@ -941,9 +958,22 @@ therefore be set equal to
 When the measurement is over (at $t=\infty$), one's estimate for the original phase of the
 system is $\phi=\hat\varphi_\infty$. 
 
+\begin{figure}[ht]
+\includegraphics[width=6in]{qtaqmt1.pdf}
+\caption
+{One-standard-deviation contour for the Wigner function of the effect
+$F_t(R,S)$  (\ref{foradapt}) 
+for typical values of $R$ and $S$ which would occur in
+the adaptive measurement of the phase of a state with a moderate coherent
+amplitude. Here $q=a+a\dg$ and $p = -ia+ia\dg$, $x$ and $y$ are defined by
+equation (\ref{defxy}), 
+and the variances in these quadratures by equation (\ref{defvxvy}).} 
+\end{figure}
+
+
 Exactly how $\hat\varphi_t$ should be chosen as a function of $R(t)$ and $S(t)$
 is a complicated issue. As stated above, it depends on the knowledge the observer
-has regarding the preparation of the system. This is evident in figure 1, which 
+has regarding the preparation of the system. This is evident in Figure 1, which 
 shows the  Wigner function of the effect
  $F_t\bl R(t),S(t)\br$ (\ref{foradapt}) for some typical
 values of $R$ and $S$ which might occur in an adaptive phase measurement. The
@@ -1387,20 +1417,6 @@ Phys. Rev. Lett. {\bf 75}, 4587 (1995).
 
 \newpage
 
-\begin{figure}
-\psfig{figure=qtaqmt1.ps,width=65mm}
-\caption
-{One-standard-deviation contour for the Wigner function of the effect
-$F_t(R,S)$  (56)
-%(\ref{foradapt}) 
-for typical values of $R$ and $S$ which would occur in
-the adaptive measurement of the phase of a state with a moderate coherent
-amplitude. Here $q=a+a\dg$ and $p = -ia+ia\dg$, $x$ and $y$ are defined by
-equation (72),
-%equation (\ref{defxy}), 
-and the variances in these quadratures by equation (73).}
-%equation (\ref{defvxvy}).} 
-\end{figure}
 
 
 \end{document}
