--- a/1902.10355/main_dissertation.tex
+++ b/1902.10355/main_dissertation.tex
@@ -39,18 +39,32 @@
 \usepackage[numbers,round]{natbib} % sort - sorted alphabetiical, then year
 \setcitestyle{authoryear}
 
-\usepackage[hidelinks]{hyperref} % links; dont color or use boxes
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
-
-
+\def\doublespacing{\relax}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+\tolerance=2000
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % %
 %%% STYLE & FORMAT OF GOLOBAL BOOK ELEMENTS  - - - - - - -
 %
 
 %%%%%%% Default Font 
-\renewcommand{\familydefault}{\sfdefault} % better font
-\usepackage[top=1.5in, bottom=1in, left=1.5in, right=1in]{geometry}
+%\renewcommand{\familydefault}{\sfdefault} % better font
+%\usepackage[top=1.5in, bottom=1in, left=1.5in, right=1in]{geometry}
 
 %%%%%% For better headers
 \usepackage{fancyhdr} 
