--- a/quant-ph-0108132/simple.tex
+++ b/quant-ph-0108132/simple.tex
@@ -1,7 +1,29 @@
 
-%\documentstyle[12pt,epsfig]{article}
-\documentstyle[aps,prb,preprint,tighten,epsfig]{revtex}
+\documentclass[12pt]{article}
+%\documentclass[12pt,aps,prb,preprint,tighten,epsfig]{revtex}
 %\documentstyle[aps,prb,preprint,epsfig]{revtex}
+
+\usepackage{epsfig}
+
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
+\usepackage[letterpaper, margin=1.3in]{geometry}
+
 
 \def\bra#1{{\langle #1 |}}
 \def\ket#1{{| #1 \rangle}}
