--- a/quant-ph-0108132/simple.tex
+++ b/quant-ph-0108132/simple.tex
@@ -24,6 +24,7 @@ bookmarksopenlevel=10
 \linespread{1.1}
 \usepackage[letterpaper, margin=1.3in]{geometry}
 
+\date{29 Aug 2001}
 
 \def\bra#1{{\langle #1 |}}
 \def\ket#1{{| #1 \rangle}}
