--- a/quant-ph-0108132/simple.tex
+++ b/quant-ph-0108132/simple.tex
@@ -137,6 +137,19 @@ in more realistic cases.  Moreover, the recent interest in
 quantum computation and quantum information has spurred a great deal of
 work on such systems of q-bits, which we can draw on.
 
+\begin{figure}[ht]
+
+\begin{center}
+\epsfig{file=fig1.eps, width=5in}
+\label{fig1}
+\end{center}
+\caption{\small This is a schematic diagram of the type of model used in
+this paper.  The system is a single two-level system, or q-bit.  It
+interacts briefly with a series of environment q-bits which pass by
+with average time intervals of $\delta t$, and the environment bits
+are subsequently measured.}
+\end{figure}
+
 I will assume that the environment bits interact
 with the system bit successively for finite, disjoint intervals.
 I will further assume that these bits
@@ -146,6 +159,23 @@ that we need to consider is a succession of interactions between two q-bits.
 After each environment bit interacts with the system, we can measure it
 in any way we like, and use the information obtained to update our
 knowledge of the state.
+
+\begin{figure}[ht]
+\begin{center}
+\epsfig{file=fig2.eps, width=5in}
+\label{fig2}
+\end{center}
+\caption{\small Here is a particular physical system of which the model
+of this paper is an idealization.  The system is an electromagnetic
+field mode in a cavity with a partially-silvered mirror.  There is on
+average less than a single photon in the mode at a time, so only the
+lowest two occupation levels contribute significantly to the dynamics.
+The external electromagnetic field is described in terms of incoming
+and outgoing wave packets of width $\delta t$, each of which reflects
+on the outside of the partially-silvered mirror.  The incoming packets
+are all in the vacuum state, but upon reflection they may absorb a
+photon emitted from the cavity.}
+\end{figure}
 
 This model of system and environment may seem excessively abstract,
 but in fact a number of experimental systems can be approximated in this
@@ -1261,6 +1291,25 @@ projector $\ket1\bra1$, which simplifies (\ref{jump_eqn}) considerably.
 However, many other systems exist in which $\L$ is not so simple, and
 which still obey equation (\ref{jump_eqn}).
 
+\begin{figure}
+\begin{center}
+\epsfig{file=fig3.eps, height=5in}
+\label{fig3}
+\end{center}
+\caption{\small These two figures show a variety of quantum jump trajectories
+for different initial states, plotting the squared amplitude $|\beta|^2$
+for the system to be in state $\ket1$ versus the time.
+Figure a) assumes an interaction
+$\U_{\rm CNOT}$ with the environment, while b) assumes $\U_{\rm SWAP}$.
+In both cases, $|\beta|^2$ decays towards zero.  Some trajectories just
+decay smoothly to 0, while others undergo a jump.  In figure a) this
+jump is to 1, while in b) they jump to 0, as in spontaneous emission.
+Note that the decays of $|\beta|^2$ is {\it not} a simple exponential,
+due to the nonlinearity of the trajectory equations.  As
+$|\beta|^2 \rightarrow 0$, however, it approaches an exponential.}
+\end{figure}
+\newpage
+
 We can readily find such an alternative system.
 Suppose that $\U_{\rm SWAP}(\theta)$
 is used instead of
@@ -1302,7 +1351,7 @@ This model obeys exactly the same stochastic Schr\"odinger equation
 $\L = \sqrt{\theta^2/\delta t}\ket0\bra1$.  Because this operator
 is {\it not} Hermitian, the distinction between $\Ldag$ and $\L$ is important
 in this case.
-We compare these two stochastic evolutions in Fig.~3a and 3b.  In both
+We compare these two stochastic evolutions in Figures.~3a and 3b.  In both
 cases, the coefficient $|\beta|^2$ decays steadily away; however, in
 some trajectories the state suddenly jumps either to $\ket1$ or $\ket0$,
 while others continue to decay smoothly towards $\ket0$.
@@ -1528,6 +1577,19 @@ about the system state from the small excess of $1$ results over $0$ results.
 The analogy to homodyne measurement is not as exact as the analogy between
 the quantum jump equation and spontaneous emission, but it is still
 suggestive.
+
+\begin{figure}[ht]
+\begin{center}
+\epsfig{file=fig4.eps, width=5in}
+\label{fig4}
+\end{center}
+\caption{This figure plots $|\beta|^2$ against time for the diffusive
+equation (\ref{real_qsd}), with several different initial states and
+realizations of the stochastic term.  We see that when the trajectories
+approach 0 or 1 they tend to remain there, while in between they diffuse
+freely.}
+\end{figure}
+
 
 For this nonunitary diffusion, the stochastic Schr\"odinger equation
 is different than in the earlier quantum jump equation (\ref{jump_eqn}).
@@ -2432,77 +2494,6 @@ Phys.~Rev.~Lett. {\bf 21}, 203 (1995).
 \bibitem{Brun2} T.A.~Brun, Phys.~Rev.~A {\bf 61}, 042107 (2000).
 
 \end{thebibliography}
-
-\eject
-\vfil
-
-\begin{figure}
-\begin{center}
-\epsfig{file=fig1.eps, width=5in}
-\label{fig1}
-\end{center}
-\caption{This is a schematic diagram of the type of model used in
-this paper.  The system is a single two-level system, or q-bit.  It
-interacts briefly with a series of environment q-bits which pass by
-with average time intervals of $\delta t$, and the environment bits
-are subsequently measured.}
-\end{figure}
-
-\eject
-\vfil
-
-\begin{figure}
-\begin{center}
-\epsfig{file=fig2.eps, width=5in}
-\label{fig2}
-\end{center}
-\caption{Here is a particular physical system of which the model
-of this paper is an idealization.  The system is an electromagnetic
-field mode in a cavity with a partially-silvered mirror.  There is on
-average less than a single photon in the mode at a time, so only the
-lowest two occupation levels contribute significantly to the dynamics.
-The external electromagnetic field is described in terms of incoming
-and outgoing wave packets of width $\delta t$, each of which reflects
-on the outside of the partially-silvered mirror.  The incoming packets
-are all in the vacuum state, but upon reflection they may absorb a
-photon emitted from the cavity.}
-\end{figure}
-
-\eject
-\vfil
-
-\begin{figure}
-\begin{center}
-\epsfig{file=fig3.eps, height=5in}
-\label{fig3}
-\end{center}
-\caption{These two figures show a variety of quantum jump trajectories
-for different initial states, plotting the squared amplitude $|\beta|^2$
-for the system to be in state $\ket1$ versus the time.
-Figure a) assumes an interaction
-$\U_{\rm CNOT}$ with the environment, while b) assumes $\U_{\rm SWAP}$.
-In both cases, $|\beta|^2$ decays towards zero.  Some trajectories just
-decay smoothly to 0, while others undergo a jump.  In figure a) this
-jump is to 1, while in b) they jump to 0, as in spontaneous emission.
-Note that the decays of $|\beta|^2$ is {\it not} a simple exponential,
-due to the nonlinearity of the trajectory equations.  As
-$|\beta|^2 \rightarrow 0$, however, it approaches an exponential.}
-\end{figure}
-
-\eject
-\vfil
-
-\begin{figure}
-\begin{center}
-\epsfig{file=fig4.eps, width=5in}
-\label{fig4}
-\end{center}
-\caption{This figure plots $|\beta|^2$ against time for the diffusive
-equation (\ref{real_qsd}), with several different initial states and
-realizations of the stochastic term.  We see that when the trajectories
-approach 0 or 1 they tend to remain there, while in between they diffuse
-freely.}
-\end{figure}
 
 \end{document}
 
