--- a/1807.05399/BH_RS.tex
+++ b/1807.05399/BH_RS.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\documentclass[a4paper,11pt]{article}
+\documentclass[12pt,a4paper]{article}
 \pdfoutput=1 % if your are submitting a pdflatex (i.e. if you have images in pdf, png or jpg format)
 \usepackage{jheppub} 
 \usepackage[utf8]{inputenc}
@@ -23,6 +23,23 @@
 
 \numberwithin{thm}{section}
 
+\usepackage[colorlinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+%\usepackage{amssymb}
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[noBBpl]{mathpazo}
+\linespread{1.1}
 
 
 \newcommand{\gsim}{ \mathop{}_{\textstyle \sim}^{\textstyle >} }
@@ -139,7 +156,7 @@
 Reeh-Schlieder theorem
 }
 
-\preprint{}
+%\preprint{}
 
 \author{Kazuya Yonekura}
 \affiliation{Faculty of Arts and Science, Kyushu University, 
