--- a/bib.bib
+++ b/bib.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Pete Su at 2019-07-05 21:31:04 -0400 
+%% Created for Pete Su at 2019-07-05 22:19:26 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Yonekura:2018bop,
+	Archiveprefix = {arXiv},
+	Author = {Yonekura, Kazuya},
+	Date-Added = {2019-07-05 22:18:51 -0400},
+	Date-Modified = {2019-07-05 22:19:25 -0400},
+	Eprint = {1807.05399},
+	Note = {\href{https://arxiv.org/abs/1807.05399}{arXiv:1807.05399}},
+	Primaryclass = {hep-th},
+	Slaccitation = {%%CITATION = ARXIV:1807.05399;%%},
+	Title = {{Black hole information and Reeh-Schlieder theorem}},
+	Year = {2018}}
 
 @article{Lindblad1976,
 	Author = {Lindblad, G.},
